Updated home page

--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "hotdrink",
+  "name": "hot-drink",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.io/isaacBrown23/Hot-Drink",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "framer-motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.1",
+    "react-router-dom": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -35,6 +39,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.0",
+    "gh-pages": "^6.3.0",
     "sass": "^1.89.1",
     "vite": "^6.3.5"
   }
